--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@id/navigation_search">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.livmas.noizer.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
-    <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.livmas.noizer.ui.dashboard.DashboardFragment"
+        android:id="@+id/navigation_search"
+        android:name="com.livmas.noizer.ui.fragments.search.SearchFragment"
         android:label="@string/title_search"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_search" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.livmas.noizer.ui.notifications.NotificationsFragment"
+        android:id="@+id/navigation_library"
+        android:name="com.livmas.noizer.ui.fragments.library.LibraryFragment"
         android:label="@string/title_library"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_library" />
 </navigation>
