--- a/feature/player/src/main/res/layout/fragment_player.xml
+++ b/feature/player/src/main/res/layout/fragment_player.xml
@@ -6,11 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.player.PlayerFragment">
 
-    <androidx.media3.ui.PlayerView
+    <androidx.media3.ui.LegacyPlayerControlView
         android:id="@+id/playerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         app:show_buffering="when_playing"
-        app:show_shuffle_button="true"/>
+        app:show_shuffle_button="true"
+        app:controller_layout_id="@layout/music_player_layout"
+        app:show_timeout="0"/>
 
 </FrameLayout>
