--- a/feature/player/src/main/res/layout/fragment_player.xml
+++ b/feature/player/src/main/res/layout/fragment_player.xml
@@ -4,12 +4,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.player.PlayerFragment">
+    tools:context=".ui.fragments.player.PlayerFragment"
+    android:background="?attr/colorOnPrimary">
 
     <androidx.media3.ui.LegacyPlayerControlView
         android:id="@+id/playerView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         app:show_buffering="when_playing"
         app:show_shuffle_button="true"
         app:controller_layout_id="@layout/music_player_layout"
