--- a/feature/search/src/main/res/layout/fragment_search.xml
+++ b/feature/search/src/main/res/layout/fragment_search.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="text"
-        android:text="Name" />
+        android:hint="@string/search_bar_hint"
+        android:inputType="text" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSearchResult"
