--- a/ui/src/main/res/values/colors.xml
+++ b/ui/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_gray">#777777</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_smoke">#f5f5f5</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
