--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -4,4 +4,8 @@
         <item name="android:textSize">26sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="CommonFragmentStyle">
+        <item name="android:padding">10dp</item>
+    </style>
 </resources>
