--- a/ui/src/main/res/values/themes.xml
+++ b/ui/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
 
 
     <!-- Base application theme. -->
-    <style name="Theme.Noizer.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Noizer.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
