--- a/ui/src/main/res/values/colors.xml
+++ b/ui/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="gray">#292929</color>
-    <color name="light_gray">#777777</color>
+    <color name="grey">#292929</color>
+    <color name="light_grey">#777777</color>
     <color name="white">#FFFFFFFF</color>
     <color name="white_smoke">#f5f5f5</color>
     <color name="transparent">#00FFFFFF</color>
