--- a/feature/player/src/main/res/layout/fragment_player.xml
+++ b/feature/player/src/main/res/layout/fragment_player.xml
@@ -1,10 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragments.player.PlayerFragment">
+    tools:context=".ui.fragments.player.PlayerFragment"
+    android:orientation="vertical"
+    android:background="?attr/colorOnPrimary"
+    android:padding="8dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <ImageView
+            android:id="@+id/ivTrackCover"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/player_track_info_size" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="@dimen/player_padding"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tvTrackTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="Title"/>
+            <TextView
+                android:id="@+id/tvTrackAuthor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textColor="@color/light_grey"
+                android:text="Author"/>
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="@dimen/player_track_info_size"
+            android:layout_height="@dimen/player_track_info_size"
+            android:padding="5dp">
+
+            <ToggleButton
+                android:background="@drawable/ic_like"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                style="@style/LikeToggleButton" />
+        </FrameLayout>
+    </LinearLayout>
 
     <androidx.media3.ui.PlayerControlView
         android:id="@+id/playerView"
@@ -17,4 +64,4 @@
         app:show_timeout="0"
         android:background="?attr/colorOnPrimary"/>
 
-</FrameLayout>
+</LinearLayout>
