--- a/feature/player/src/main/res/values/dimens.xml
+++ b/feature/player/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="player_padding">8dp</dimen>
+    <dimen name="player_track_info_size">40dp</dimen>
 </resources>
